[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/top_bar.png" type="Texture" id=2]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/camera.gd" type="Script" id=4]
[ext_resource path="res://scenes/Smiley.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/reset.gd" type="Script" id=6]
[ext_resource path="res://scenes/game.gd" type="Script" id=7]
[ext_resource path="res://resources/fruit.ogg" type="AudioStream" id=8]
[ext_resource path="res://resources/click.ogg" type="AudioStream" id=9]
[ext_resource path="res://resources/reset.ogg" type="AudioStream" id=10]
[ext_resource path="res://resources/Abaddon Bold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://resources/win.ogg" type="AudioStream" id=12]
[ext_resource path="res://resources/pickup.ogg" type="AudioStream" id=13]
[ext_resource path="res://resources/eat.ogg" type="AudioStream" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
outline_color = Color( 0.639216, 0.654902, 0.760784, 1 )
font_data = ExtResource( 11 )

[sub_resource type="AudioStreamRandomPitch" id=8]
audio_stream = ExtResource( 8 )
random_pitch = 1.01

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 9 )
random_pitch = 1.05

[node name="Game" type="Node2D"]
script = ExtResource( 7 )

[node name="Grid" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 80 )

[node name="TopBar" type="Sprite" parent="."]
position = Vector2( 256, 32 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 200.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
margin_left = 11.0
margin_top = 3.0
margin_right = 189.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_right = 178.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 3 )
text = "Fwuits Discovered!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FwuitsRevealed" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 178.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -187.0
margin_top = 3.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="CanvasLayer/Control2/CenterContainer"]
margin_left = 39.0
margin_top = 18.0
margin_right = 147.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.952941, 0.952941, 0.952941, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Start Over"
script = ExtResource( 6 )

[node name="Control3" type="Control" parent="CanvasLayer"]
margin_top = 64.0
margin_right = 512.0
margin_bottom = 576.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouDidIt" type="Label" parent="CanvasLayer/Control3/CenterContainer"]
visible = false
margin_left = 114.0
margin_top = 220.0
margin_right = 398.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 6 )
text = "You did it!"

[node name="Smiley" parent="." instance=ExtResource( 5 )]
position = Vector2( 256, 32 )

[node name="Audio" type="Node" parent="."]

[node name="FwuitChime" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource( 8 )
volume_db = -4.0

[node name="ResetChime" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )

[node name="WonChime" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 12 )

[node name="ClickChime" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource( 7 )
volume_db = -10.0

[node name="PickupChime" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="EatChime" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 288 )
current = true
script = ExtResource( 4 )

[node name="Followers" type="Node2D" parent="."]

[connection signal="pressed" from="CanvasLayer/Control2/CenterContainer/Button" to="CanvasLayer/Control2/CenterContainer/Button" method="_on_Button_pressed"]
